welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: type boolean
var fini:boolean=false;
         ^BDRBuggle:31: error: Boolean does not take parameters
} else (litMessage() == "X") {
                             ^